@startuml Módulo Core (Visão Expandida)
skinparam classAttributeIconSize 0
left to right direction

package "Módulo Core" #F9F9F9 {
    class AplicacaoBancaria {
        + {static} ListaUsuarios : ArrayList<Usuario>
        + {static} investimentosDisponiveis : ArrayList<Investimento>
        - {static} ultimaAplicacaoInvestimento : YearMonth
        - {static} {final} DIA_ROTINA : int = 5
        
        + {static} main(args : String[]) : void
        - {static} inicializarCatalogoInvestimentos() : void
        - {static} verificarRotinas(): void
        
        + {static} menuInicial():  void
        - {static} Login() : void
        - {static} Cadastro() : void
        + {static} menuGestaoContas(encontrado : Cliente) : void
        - {static} AberturaConta(encontrado : Cliente) : void
        + {static} menuPrincipalCliente(conta : Conta, encontrado : Cliente) : void
        + {static} configuracoes(encontrado : Usuario) : void
        - {static} gestaoCartoes(conta : Conta, encontrado : Cliente) : void
        + {static} investimentosEPoupanca(conta : Conta, encontrado : Cliente) : void
        + {static} menuPrincipalAdministrador(admin : Administrador) : void
    }
}

package "Módulo Usuários" #EBF5FB {
    abstract class Usuario <<abstract>>
    class Cliente
    class Administrador
}

package "Módulo Operações" #E8F8F5 {
    class Investimento
}

package "Util" #F9F9F9 {
    class SwingUtil
    class UsuarioBancoRepository
    class ContaBancoRepository
    class TransacaoBancoRepository
    class CartaoBancoRepository
    class InvestimentoBancoRepository
    class ConexaoBanco
}

AplicacaoBancaria "1" *-- "0..*" Usuario : gerencia >
AplicacaoBancaria "1" --> "0..*" Investimento : disponibiliza >
AplicacaoBancaria ..> SwingUtil : usa para entrada de dados
AplicacaoBancaria ..> UsuarioBancoRepository : usa para gerenciar usuários
AplicacaoBancaria ..> ContaBancoRepository : usa para gerenciar contas
AplicacaoBancaria ..> TransacaoBancoRepository : usa para gerenciar transações
AplicacaoBancaria ..> CartaoBancoRepository : usa para gerenciar cartões
AplicacaoBancaria ..> InvestimentoBancoRepository : usa para gerenciar investimentos
AplicacaoBancaria ..> ConexaoBanco : usa para conectar ao banco de dados
@enduml